// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Span component aligned 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: right;
  color: #262D33;
}

<span
  className="c0"
>
  Hello
</span>
`;

exports[`A Span component resized 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 2.875rem;
  line-height: 4rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
  color: #262D33;
}

<span
  className="c0"
  size="4xlarge"
>
  Hello
</span>
`;

exports[`A Span component transformed 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: uppercase;
  text-align: left;
  color: #262D33;
}

<span
  className="c0"
>
  Hello
</span>
`;

exports[`A Span component tuncated 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #262D33;
}

<span
  className="c0"
>
  Hello
</span>
`;

exports[`A Span component weight 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 700;
  text-transform: none;
  text-align: left;
  color: #262D33;
}

<span
  className="c0"
>
  Hello
</span>
`;

exports[`A Span component with variant 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
  color: #CC1F36;
}

<span
  className="c0"
>
  Hello
</span>
`;

exports[`A default Span component 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
  color: #262D33;
}

<span
  className="c0"
>
  Hello
</span>
`;
